<resources>
    <string name="app_name">Warehouse_System_assignment</string>
    <string name="warehouse_mobile_system">Warehouse Mobile System</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_stock">Add stock</string>
    <string name="menu_rack">Rack</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_item">Item</string>
    <string name="menu_report">Report</string>
    <string name="menu_logout">Log out</string>
    <string name="reports">Reports</string>
    <string name="date">Date:</string>
    <string name="please_select_a_report">Please select a report:</string>
    <string name="generate">Generate</string>
    <string name="todo">TODO</string>
    <string name="to">To</string>
    <string name="jan_01_2020">jan_01_2020</string>
    <string name="warehouse_management_profile_center">Warehouse management profile center</string>
    <string name="policy">Policy</string>
    <string name="privacy_terms_and_conditions">Privacy, terms, and conditions</string>
    <string name="about_us">About Us</string>
    <string name="our_operations_business_and_goals">Our operations, business and goals</string>
    <string name="manage_dependent">Manage Dependent</string>
    <string name="modify_staffs_in_groups">Modify staffs in groups</string>
    <string name="warehouse">Warehouse</string>
    <string name="rack_location">Rack Location</string>
    <string name="staff_maintenance">Staff Maintenance</string>
    <string name="report">Report</string>
    <string name="data_maintenance">Data Maintenance</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">line 2</string>
    <string-array name="reports">
        <item>Materials report</item>
        <item>Staff report</item>
        <item>Invoice report</item>
        <item>Stock in report</item>
        <item>Top stock-out report</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="_150">150</string>
    <string name="item_id">Item ID :</string>
    <string name="name">Name :</string>
    <string name="i0000000000001">I0000000000001</string>
    <string name="qty_box_in_stock">Qty box in stock :</string>
    <string name="mask">Mask</string>
    <string name="string_mask">Mask</string>
    <string name="select_rack">Select rack</string>
    <string name="rack_1_small">Rack 1 ( Small )</string>
    <string name="select_available_rack">Select available rack</string>
    <string name="rack_2_big">rack 2 ( Big )</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
</resources>