<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile_menu"
            android:icon="@drawable/ic_profile_foreground"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_add_foreground"
            android:title="@string/menu_add_stock" />
        <item
            android:id="@+id/nav_stock_rack"
            android:icon="@drawable/ic_rack_foreground"
            android:title="@string/menu_rack" />
        <item
            android:id="@+id/nav_item_list"
            android:icon="@drawable/ic_item_foreground"
            android:title="@string/menu_item" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_out_foreground"
            android:title="Stock out" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_foreground"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_foreground"
            android:title="@string/menu_logout" />
    </group>
</menu>